<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ExploreAirport_About"
    android:orientation="vertical">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#EBF4F2"
        android:text="History"
        android:textStyle="bold"
        android:textSize="30dp"
        android:textAlignment="center"
        android:layout_marginLeft="20dp"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardBackgroundColor="#F3EFEF"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        android:elevation="10dp">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_margin="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/abt1"
        android:textSize="15dp"
        android:textStyle="italic"
        />
    <TextView
        android:layout_margin="5dp"
        android:textSize="15dp"
        android:textStyle="italic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/abt2"
        />
    <TextView
        android:layout_margin="5dp"
        android:textSize="15dp"
        android:textStyle="italic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/abt3"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:src="@drawable/bial_journey"
        />
</LinearLayout>

    </androidx.cardview.widget.CardView>
    </ScrollView>

</LinearLayout>