<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.Transit.CarRentals">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:elevation="10dp"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginLeft="50dp"
            android:src="@drawable/wti"
            />
        <TextView
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wt1"
            android:layout_margin="10dp"/>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:src="@drawable/ic_baseline_phone_24"/>
                <TextView
                    android:id="@+id/wti1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+91-7292069084"
                    android:textColorHint="@color/skyBlue"
                    android:textColor="@color/skyBlue"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:src="@drawable/ic_baseline_phone_24"/>
                <TextView
                    android:id="@+id/wti2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+91-8047406361"
                    android:textColorHint="@color/skyBlue"
                    android:textColor="@color/skyBlue"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:src="@drawable/ic_baseline_web_24"/>
                <TextView
                    android:id="@+id/wtiw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/wtiw"
                    android:textColorHint="@color/skyBlue"
                    android:textColor="@color/skyBlue"/>
            </LinearLayout>



            <ImageButton
                android:id="@+id/wtig"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/gplay"
                android:layout_marginLeft="75dp"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:elevation="10dp"

            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_marginLeft="50dp"
                    android:src="@drawable/car"
                    />
                <TextView
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/car1"
                    android:layout_margin="10dp"/>
                <TextView
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/car3"
                    android:layout_margin="10dp"/>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="horizontal"
                    >
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:src="@drawable/ic_baseline_phone_24"/>
                    <TextView
                        android:id="@+id/car1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="+91-8882222222"
                        android:textColorHint="@color/skyBlue"
                        android:textColor="@color/skyBlue"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="horizontal"
                    >
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:src="@drawable/ic_baseline_phone_24"/>
                    <TextView
                        android:id="@+id/car2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="+91-9972502299"
                        android:textColorHint="@color/skyBlue"
                        android:textColor="@color/skyBlue"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="horizontal"
                    >
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:src="@drawable/ic_baseline_phone_24"/>
                    <TextView
                        android:id="@+id/car3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="+91-9972303019"
                        android:textColorHint="@color/skyBlue"
                        android:textColor="@color/skyBlue"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="horizontal"
                    >
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:src="@drawable/ic_baseline_phone_24"/>
                    <TextView
                        android:id="@+id/carw"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="@string/carw"
                        android:textColorHint="@color/skyBlue"
                        android:textColor="@color/skyBlue"/>
                </LinearLayout>
                <ImageButton
                    android:id="@+id/carg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/gplay"
                    android:layout_marginLeft="75dp"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>



    </LinearLayout>
</ScrollView>